<?xml version="1.0"?>
<package>
  <name>husky_navigation</name>
  <version>0.0.0</version>
  <description>The package is used to run the navigation stack</description>

  <maintainer email="nicholas.c.charron@gmail.com">Nick Charron</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>hector_mapping_nav</depend>
  <depend>husky_custom_description</depend>
  <depend>move_base</depend>
  <depend>outdoor_waypoint_nav</depend>
  <depend>robot_localization</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
